--- a/components/HeaderNew.module.css
+++ b/components/HeaderNew.module.css
@@ -80,13 +80,36 @@
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, 0.2);
 }
 
-.navItems {
-  margin-bottom: 2rem;
-  padding: 0;
-  list-style: none;
+.nav {
+  margin-left: 0rem;
 }
 
-.navList,
+/* .li {
+  margin-left: 0rem;
+} */
+
+/* .ul {
+  margin-left: 0rem;
+  left: 0rem;
+  right: 0rem;
+  margin-bottom: 2rem;
+  padding: 0;
+} */
+
+/* .navItems {
+  left: 0rem;
+} */
+/* margin-bottom: 2rem; */
+/* padding: 0; */
+/* list-style: none; */
+
+/* .navList {
+  display: inline-block;
+  margin-left: 0rem;
+  margin-right: 0rem;
+} */
+
+/* .navList, */
 .navItem {
   display: inline-block;
   margin-right: 1rem;
